<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="finding_cheap_flights">Поиск дешевых авиабилетов</string>
    <string name="music_title">Музыкально отлететь</string>
    <string name="from_hint">Откуда - Москва</string>
    <string name="where_hint">Куда - Турция</string>
    <string name="route">Сложный маршрут</string>
    <string name="somewhere">Куда угодно</string>
    <string name="hot_tickets">Горячие билеты</string>
    <string name="stambul">Стамбул</string>
    <string name="popular_direction">Популярное направление</string>
    <string name="sochi">Сочи</string>
    <string name="phuket">Пхукет</string>
    <string name="not_implemented_yet">This feature is not implemented yet</string>
    <string name="back">обратно</string>
    <string name="econom">1,эконом</string>
    <string name="filter">фильтр</string>
    <string name="direct_flights">Прямые рейсы</string>
    <string name="show_all_tickets">Посмотреть все билеты</string>
    <string name="filter_text">Фильтр</string>
    <string name="chart">График цен</string>
    <string name="hyphen">-</string>
    <string name="hyphen_long">–</string>
    <string name="no_transfer">/Без пересадок</string>
    <string name="one_passenger">, 1 пассажир</string>
    <string name="available_values">
        абвгдеёжзийклмнопрстуфхцчшщъыьэюя
        АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯ-
    </string>
    <string name="price">%1$s ₽</string>
</resources>