<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvMainTitle"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAppearance="@style/Title_1"
        android:text="@string/finding_cheap_flights"
        android:layout_marginTop="40dp"
        android:textColor="@color/grey_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvOuter"
        android:layout_width="0dp"
        android:layout_height="122dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/grey_4"
        android:padding="12dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMainTitle" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvInner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/grey_5"
        app:cardCornerRadius="16dp"
        app:layout_constraintBottom_toBottomOf="@id/cvOuter"
        app:layout_constraintLeft_toLeftOf="@id/cvOuter"
        app:layout_constraintRight_toRightOf="@id/cvOuter"
        app:layout_constraintTop_toTopOf="@id/cvOuter" />

    <ImageView
        android:id="@+id/ivSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:elevation="2dp"
        android:src="@drawable/ic_search_24_dark"
        app:layout_constraintBottom_toBottomOf="@id/divider"
        app:layout_constraintLeft_toLeftOf="@id/cvInner"
        app:layout_constraintTop_toTopOf="@id/divider" />

    <EditText
        android:id="@+id/tvDeparture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:elevation="2dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/from_hint"
        android:inputType="text"
        android:maxLines="1"
        android:textColorHint="@color/grey_6"
        android:digits="@string/available_values"
        android:textAppearance="@style/Title_2"
        android:textColor="@android:color/white"
        android:background="@android:color/transparent"
        app:layout_constraintLeft_toRightOf="@id/ivSearch"
        app:layout_constraintRight_toRightOf="@id/cvInner"
        app:layout_constraintBottom_toBottomOf="@id/divider" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:elevation="4dp"
        app:dividerColor="@color/grey_6"
        app:layout_constraintLeft_toLeftOf="@id/tvDeparture"
        app:layout_constraintRight_toRightOf="@id/tvDeparture"
        app:layout_constraintTop_toTopOf="@id/cvInner"
        app:layout_constraintBottom_toBottomOf="@id/cvInner"/>


    <TextView
        android:id="@+id/etWhere"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="2dp"
        android:layout_marginTop="6dp"
        android:text="@string/where_hint"
        android:textColor="@color/grey_6"
        android:textAppearance="@style/Title_2"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintLeft_toLeftOf="@id/tvDeparture"
        app:layout_constraintRight_toRightOf="@id/tvDeparture" />

    <TextView
        android:id="@+id/tvMusicTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/music_title"
        android:textAppearance="@style/Title_1"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvOuter" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMusicOffer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMusicTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>