<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/vData"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:background="@color/grey_2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:src="@drawable/ic_left_arrow_blue"
        app:layout_constraintBottom_toBottomOf="@id/vData"
        app:layout_constraintLeft_toLeftOf="@id/vData"
        app:layout_constraintTop_toTopOf="@id/vData" />

    <TextView
        android:id="@+id/tvDeparture"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/Title_3"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toRightOf="@id/ivBack"
        app:layout_constraintTop_toTopOf="@id/vData"
        tools:text="Москва" />

    <TextView
        android:id="@+id/tvHyphen"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="2dp"
        android:text="@string/hyphen"
        android:textAppearance="@style/Title_3"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/tvDeparture"
        app:layout_constraintLeft_toRightOf="@id/tvDeparture"
        app:layout_constraintTop_toTopOf="@id/tvDeparture" />

    <TextView
        android:id="@+id/tvDestination"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Title_3"
        android:textColor="@android:color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvDeparture"
        app:layout_constraintLeft_toRightOf="@id/tvHyphen"
        tools:text="Москва" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Title_4"
        android:textColor="@color/grey_6"
        app:layout_constraintLeft_toLeftOf="@id/tvDeparture"
        app:layout_constraintTop_toBottomOf="@id/tvDeparture"
        tools:text="Москва-Сочи" />

    <TextView
        android:id="@+id/tvPassenger"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/one_passenger"
        android:textAppearance="@style/Title_4"
        android:textColor="@color/grey_6"
        app:layout_constraintLeft_toRightOf="@id/tvDate"
        app:layout_constraintTop_toBottomOf="@id/tvDeparture"
        tools:text="Москва-Сочи" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTicket"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vData" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvOptions"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="72dp"
        android:backgroundTint="@color/blue"
        app:cardCornerRadius="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ImageView
        android:id="@+id/ivFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:elevation="2dp"
        android:src="@drawable/ic_filter"
        app:layout_constraintBottom_toBottomOf="@id/cvOptions"
        app:layout_constraintLeft_toLeftOf="@id/cvOptions"
        app:layout_constraintTop_toTopOf="@id/cvOptions" />

    <TextView
        android:id="@+id/tvFilter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:elevation="2dp"
        android:text="@string/filter_text"
        android:textAppearance="@style/Title_4"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/cvOptions"
        app:layout_constraintLeft_toRightOf="@id/ivFilter"
        app:layout_constraintTop_toTopOf="@id/cvOptions"
        tools:text="Фильтр" />

    <ImageView
        android:id="@+id/ivChart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:elevation="2dp"
        android:src="@drawable/ic_chart"
        app:layout_constraintBottom_toBottomOf="@id/cvOptions"
        app:layout_constraintLeft_toRightOf="@id/tvFilter"
        app:layout_constraintTop_toTopOf="@id/cvOptions" />

    <TextView
        android:id="@+id/tvChart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:elevation="2dp"
        android:text="@string/chart"
        android:textAppearance="@style/Title_4"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/cvOptions"
        app:layout_constraintLeft_toRightOf="@id/ivChart"
        app:layout_constraintTop_toTopOf="@id/cvOptions"
        tools:text="График цен" />


</androidx.constraintlayout.widget.ConstraintLayout>