<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvSearch"
        android:layout_width="0dp"
        android:layout_height="122dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="56dp"
        android:background="@color/cardview_dark_background"
        android:padding="12dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:elevation="2dp"
        android:src="@drawable/ic_left_arrow"
        app:layout_constraintBottom_toBottomOf="@+id/cvSearch"
        app:layout_constraintLeft_toLeftOf="@id/cvSearch"
        app:layout_constraintTop_toTopOf="@id/cvSearch"
        tools:src="@drawable/ic_search_24" />

    <TextView
        android:id="@+id/tvFrom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:elevation="2dp"
        app:layout_constraintLeft_toRightOf="@id/ivBack"
        app:layout_constraintRight_toLeftOf="@id/ivChange"
        app:layout_constraintTop_toTopOf="@id/cvSearch"
        tools:text="From" />

    <ImageView
        android:id="@+id/ivChange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:elevation="2dp"
        android:src="@drawable/ic_change"
        app:layout_constraintBottom_toBottomOf="@+id/tvFrom"
        app:layout_constraintRight_toRightOf="@id/cvSearch"
        app:layout_constraintTop_toTopOf="@id/tvFrom"
        tools:src="@drawable/ic_search_24" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/dividerSearch"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:elevation="4dp"
        app:dividerColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/cvSearch"
        app:layout_constraintLeft_toLeftOf="@id/tvFrom"
        app:layout_constraintRight_toRightOf="@id/ivChange"
        app:layout_constraintTop_toTopOf="@id/cvSearch" />

    <TextView
        android:id="@+id/tvWhere"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:elevation="2dp"
        app:layout_constraintLeft_toLeftOf="@id/tvFrom"
        app:layout_constraintRight_toLeftOf="@id/ivClear"
        app:layout_constraintTop_toTopOf="@id/dividerSearch"
        tools:text="From" />

    <ImageView
        android:id="@+id/ivClear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:elevation="2dp"
        android:src="@drawable/ic_change"
        app:layout_constraintBottom_toBottomOf="@+id/tvWhere"
        app:layout_constraintRight_toRightOf="@id/ivChange"
        app:layout_constraintTop_toTopOf="@id/tvWhere"
        tools:src="@drawable/ic_search_24" />

    <HorizontalScrollView
        android:id="@+id/scrollViewChips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/cvSearch">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:chipSpacingHorizontal="25dp"
            app:singleLine="true">

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                app:chipIcon="@drawable/ic_plus"
                app:chipIconSize="14dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/econom"
                app:chipIcon="@drawable/ic_person" />

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter"
                app:chipIcon="@drawable/ic_filter" />

        </com.google.android.material.chip.ChipGroup>

    </HorizontalScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDirect"
        android:layout_width="0dp"
        android:layout_height="288dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/cardview_dark_background"
        android:padding="12dp"
        app:cardCornerRadius="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollViewChips" />

    <TextView
        android:id="@+id/tvDirect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:elevation="2dp"
        android:text="@string/direct_flights"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@id/cvDirect"
        app:layout_constraintTop_toTopOf="@id/cvDirect" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvDirectFlights"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintLeft_toLeftOf="@id/cvDirect"
        app:layout_constraintRight_toRightOf="@id/cvDirect"
        app:layout_constraintTop_toBottomOf="@id/tvDirect" />

</androidx.constraintlayout.widget.ConstraintLayout>